# solisp

./: .gitignore  ASYNC_AWAIT_GUIDE.md  BUILTIN_FUNCTIONS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DUAL_V1_V2_IMPLEMENTATION.md  GITHUB_ACTIONS_SETUP.md  HOW_TO_USE.md  PUBLISHING.md  PUBLISH_CHECKLIST.md  QA_TEST_RUNNER_GUIDE.md  QUICK_START.md  README.md  RELEASE_NOTES.md  SBPF_COMPILER_BUILTINS.md  TYPES_DESIGN.md  USAGE_GUIDE.md  llms.txt  verify_release.sh
agent_queries/: QUERY_CATALOG.md  README.md  REFINEMENT_COMPLETE.md  REFINEMENT_REPORT.md  SELF_ASK_FRAMEWORK.md  SELF_ASK_SUMMARY.md  VALIDATION_REPORT.md  validation_results.json
agent_queries/advanced/: 076_factorial.ovsm  077_fibonacci_recursive_iter.ovsm  078_prime_check.ovsm  (+22 more)
benches/: async_bench.rs  execution_bench.rs
docs/: COMMON_PATTERNS.md
examples/: README.md  async_basics.rs  async_data_processing.rs  compare_elf_bytes.rs  compare_elf_parsing.rs  compile_and_deploy.rs  complete_demo.rs  comprehensive_tools.rs  debug_amm.rs  debug_break.md  debug_elf_low_level.rs  debug_elf_parse.rs  debug_elf_parser.rs  debug_elf_rbpf_trace.rs  debug_elf_symbols.rs  debug_for.rs  debug_for_return.md  debug_guard_parse.rs  debug_if_condition.md  debug_instruction_decode.rs  debug_logical.rs  debug_pt_dynamic.rs  debug_rbpf_counting.rs  debug_rbpf_search.rs  debug_relocation_offset.rs  debug_slice_failure.rs  debug_try_parse.rs  debug_vc.rs  edge_case_tests.md  feature_coverage_test.md  gen_syscall_elf.rs  minimal_repro.md  minimal_sbpf_elf.rs  minimal_syscall_elf.rs  qa_test_runner.rs  run_file.rs  sample_qa_test.md  showcase_new_features.rs  simple_repl.rs  solana_v1_elf.rs  (+19 more)
lean/: Main.lean  OVSM.lean  lakefile.lean
src/: error.rs  lib.rs
tests/: agent_accountability_tests.rs  bordeaux_threads_tests.rs  case_tests.rs  catch_throw_tests.rs  common_lisp_functions_tests.rs  flet_tests.rs  formal_verification_tests.rs  labels_tests.rs  let_star_tests.rs  lisp_comprehensive_tests.rs  lisp_e2e_tests.rs  macro_tests.rs  optional_key_params_tests.rs  proptest_fuzz_tests.proptest-regressions  proptest_fuzz_tests.rs  varargs_simple_tests.rs  varargs_tests.rs
(+207 files in other folders)
