[package]
name = "solisp"
version = "1.0.0"
edition = "2021"
authors = ["OpenSVM Team <rin@opensvm.com>"]
description = "Solisp - A LISP dialect for Solana blockchain automation, scripting, and sBPF compilation"
license = "MIT"
repository = "https://github.com/openSVM/solisp"
homepage = "https://github.com/openSVM/solisp"
documentation = "https://docs.rs/solisp"
readme = "README.md"
keywords = ["blockchain", "solana", "lisp", "interpreter", "sbpf"]
categories = ["parser-implementations", "development-tools", "compilers"]
include = [
    "src/**/*",
    "examples/**/*.rs",
    "examples/**/*.ovsm",
    "examples/README.md",
    "tests/**/*",
    "benches/**/*",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "USAGE_GUIDE.md",
    "HOW_TO_USE.md",
]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# Solana (matching parent crate version)
solana-sdk = "3.0"
solana-client = "3.0"
solana-transaction-status = "3.0"

# Data structures
dashmap = "5.5"
lru = "0.12"
lazy_static = "1.4"

# Time
chrono = "0.4"

# UUID for agents
uuid = { version = "1.6", features = ["v4", "serde"] }

# Cryptography and encoding
sha2 = "0.10"
base64 = "0.22.1"
bs58 = "0.5.1"
hex = "0.4"
url = "2.5"
csv = "1.3"

# Regex for pattern matching
regex = "1.10"

# HTTP and WebSocket client
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Thread pool for concurrent event processing
rayon = "1.8"
num_cpus = "1.16"

# Bordeaux Threads support (reentrant mutexes)
parking_lot = "0.12"

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"
bolero = "0.10"
tokio-test = "0.4"
solana_rbpf = "0.8.5"

[[bench]]
name = "execution_bench"
harness = false

[[bench]]
name = "async_bench"
harness = false

[features]
default = ["stdlib", "agents"]
stdlib = []
agents = []
